--- a/Documents/projects/foodie_fly_restaurant/web/index.html
+++ b/Documents/projects/foodie_fly_restaurant/web/index.html
@@ -55,5 +55,24 @@
       });
     });
   </script>
+  <script type="module">
+    // Import the functions you need from the SDKs you need
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
+    // TODO: Add SDKs for Firebase products that you want to use
+    // https://firebase.google.com/docs/web/setup#available-libraries
+  
+    // Your web app's Firebase configuration
+    const firebaseConfig = {
+      apiKey: "AIzaSyDYgoBrH-V34kiLRj_52usoeZ1tC-FPpEg",
+      authDomain: "fork-plate-restaurant.firebaseapp.com",
+      projectId: "fork-plate-restaurant",
+      storageBucket: "fork-plate-restaurant.appspot.com",
+      messagingSenderId: "14391672524",
+      appId: "1:14391672524:web:7fb90fa1a12d0d400ccc69"
+    };
+  
+    // Initialize Firebase
+    const app = initializeApp(firebaseConfig);
+  </script>
 </body>
 </html>
